# debase

./: .actrc  .gitignore  CMakeLists.txt  Driver.cpp  Examples.cmake  LICENSE  README.md  Setup.cmake  debase-generate.py.in  example-lib-out.lib
.github/actions/install-act-deps/: action.yml
.github/actions/install-llvm/: action.yml
.github/workflows/: build.yml
driver/: ArchiveHandler.cpp  ArchiveHandler.hpp  CMakeLists.txt  Character.hpp  Driver.cpp  FilePropertyCache.cpp  FilePropertyCache.hpp  LLVM.hpp  LLVMTargets.hpp.in  Magic.cpp  Magic.hpp  NameClassifier.cpp  NameClassifier.hpp  Pattern.cpp  Pattern.hpp  PatternLex.hpp  Shared.hpp  SymbolFeatures.hpp  SymbolMatcher.cpp  SymbolMatcher.hpp  Triple.cpp  Triple.hpp  UniqueStringVector.hpp  UnlinkRefs.cpp  UnlinkRefs.hpp
driver/compat/: CMakeLists.txt  vector_algorithms.cpp
examples/Debug/: Config.json  Debug.cpp  Debug.hpp  DebugMSVC.ll
examples/Filename/: Class.cpp  Class.hpp  Class.ll  Config.json  Driver.cpp
examples/Simple/: Config.json  Driver.cpp  Simple.config  Simple.cpp  Simple.hpp  Simple.ll  SimpleI.ll  SimpleMSVC.ll  SimpleMSVC2.bc  SimpleMSVC2.ll  SimpleNI.ll  TrieConfig.json
py/: Dummy.cpp  waiter.py
py/debase/: cl_args.py  main.py
runtime/: .gitignore  CMakeLists.txt  DebaseAPI.hpp
runtime/debase/: Annotations.hpp  Config.hpp.in  Features.hpp  Hint.hpp
scripts/: DebaseLLVM.cmake  LLVM.cmake
tests/: TestLexPattern.cpp
